# Resume-Builder-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
core/: prompt.py  resources.py  tools.py
doc_utils/: doc_builder.py  doc_config.py  doc_model.py  doc_tools.py
init-scripts/: 01-create-schema.sql  02-create-functions.sql
src/: client-test.py  config.py  mcp_server.py
src/auth/: auth.py
src/core/: prompt.py  resources.py  tools.py
src/db/: database.py
src/db/entities/: __init__.py  additional.py  catered_resume.py  section.py  user.py
src/db/repo/: additionals_repository.py  catered_resume_repository.py  section_repository.py  user_repository.py
src/doc_utils/: doc_builder.py
